# school-stuff

./: README.md
CommerceElectronique--/CommerceElectronique/: accueil.php  donnees.inc.php  facturation.php  identification.php  index.php  rubrique.php  style.css
CorrectionsPHP/: Accueil.php  Affichage.php  ExpressionsRegulieres.php  Formulaire.php  FormulaireEtVerification.php  SaisieTailleTriangle.php  SessionIncrementation.php  SessionInitialisation.php  TabPays.inc.php  Tableaux.php  Triangle.php  VerificationFormulaire.php
PPIL_CPP_VISITEUR/: CMakeLists.txt
PPIL_CPP_VISITEUR/headers/: Constante.h  Expression.h  Fois.h  OpBinaire.h  Plus.h  Variable.h  Visiteur.h
PPIL_CPP_VISITEUR/src/: Constante.cpp  Expression.cpp  Fois.cpp  OpBinaire.cpp  Plus.cpp  TestVisiteurDerivee.cpp  Variable.cpp
PPIL_GEO/: Matrice22.h  TestMatrice22.cpp  Vecteur2D.cpp  Vecteur2D.h
PPIL_JAVA/src/: DicoEtrangerFrancais.java  DicoEtrangerFranciasCORDeviseToEuro.java  DicoEtrangerFranciasCORFarToCel.java  EtrangerFrancaisCOR.java  EtrangerFrancaisCORTexte.java  testDicoEtrangerFrancais.java
PPIL_JAVA/src/DP_visiteur/: PasseSimple.java  Test_verb.java  VisiteurVerb.java  conjuguer_verb.java  participe_passer.java  verbe.java  verbe_1er.java  verbe_2eme.java
PPIL_TCP_/: CMakeLists.txt  Server.cpp  TcpServer.java  error.cpp  error.h  main.cpp
